# AtmosphericHeating

./: main.py  setup.cfg  simulation.py
src/simulation/: simulation.py
