[metadata]
name = Atmospheric Simulation
description = A simulation for a compressible ideal gas fluid
author = Jonte Catton
platforms = unix, linux, osx, win32
classifiers =
    Programming Language :: Python :: 3 :: Only

[options]
packages = simulation
install_requires = -r
python_requires = >=3.7
package_dir =
    = src
zip_safe = no